# 3D_Pathtracer_2

./: .gitignore  CMakeLists.txt  LICENSE  README.md  appMain.cpp  main.cu  main.cu.archive
cmake/: FindOPTIX90.cmake  FindOptiX.cmake  FindPathtracer.cmake
include/: CommonInclude.hpp  Conversions.hpp  ObjParser.hpp  getIrData.hpp  render.hpp
src/: ObjParser.cpp  PtError.cpp  Stb_Implimentation.cpp  main.cu
src/ObjParser/: Material.cpp  MtlParser.cpp  ObjParser.cpp
src/Pathtracer/: buildAccelerationStructures.cu
src/Pathtracer/render/: getIrData.cpp  render.cu
tests/: test.cpp
tests/ObjParserTests/UnitTests/: FaceParseUnitTests.cpp  VertexNormalParseUnitTests.cpp  VertexParseUnitTests.cpp  VertexTextureParseUnitTests.cpp
tests/ObjParserTests/UnitTests/MtlParser/: MtlParserUnitTestsFloat.cpp  MtlParserUnitTestsVec.cpp
tests/ObjParserTests/UnitTests/ObjParser/: FaceParseUnitTests.cpp
